--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h1>Seu negócio precisa aparecer no Google</h1>
         <p>Eu crio sites profissionais rápidos, modernos e acessíveis para pequenos negócios.</p>
 
-        <a href="https://wa.me/SEUNUMERO" class="btn">Quero meu site profissional</a>
+        <a href="https://wa.me/15996424970" class="btn">Quero meu site profissional</a>
 
         <div class="benefits">
             <h2>O que você recebe:</h2>
